Made the Mesh Loader
You now load a mesh from the specified place in the level script. These are .ple files with vertex colours
You can also have multiple models in a level at once as long as they all have the same shader program.
Also updated the level maker to work with the parameter changes

--- a/LevelMaker/main.css
+++ b/LevelMaker/main.css
@@ -149,11 +149,11 @@ input{
     grid-template-columns: auto 170px;
 }
 
-#vec3 #Inputs{
+#Inputs{
     padding: 0;
 }
 
-#vec3 #Inputs li{
+#Inputs li{
     display: inline;
     font-size: 15px;
 }
@@ -168,5 +168,14 @@ input{
 }
 
 #float #Inputs input{
+    width: 157px;
+}
+
+#String{
+    display: grid;
+    grid-template-columns: auto 170px;
+}
+
+#String #Inputs input{
     width: 157px;
 }
